--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="4"
-        tools:context=".MainActivity">
+        tools:context=".Activitties.MainActivity">
 
     <TextView
             android:layout_width="wrap_content"
