--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -22,8 +22,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="3"
                 android:layout_gravity="center"
-                android:src="@drawable/Ball"
-                android:tint="#eeeeee"/>
+                android:src="@drawable/ball"/>
         <TextView
                 android:id="@+id/txvTitle"
                 android:layout_width="match_parent"
