Added main cards recycler view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,10 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/mainCardsView"
+            android:layout_weight="2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"/>
 </LinearLayout>
