--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="4"
-        tools:context=".Activitties.MainActivity">
+        tools:context=".activitties.MainActivity">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/staticCardsView"
