--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- TODO: Replace this linearLayout with a grid layout to avoid nested weights -->
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -20,4 +20,32 @@
             android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="6"
+            android:baselineAligned="false">
+        <Button
+                android:id="@+id/clearOneButton"
+                android:text="C"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+        <Button
+                android:id="@+id/clearAllButton"
+                android:text="CA"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/selectedCardsView"
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="4"/>
+
+
+    </LinearLayout>
 </LinearLayout>
