--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="4"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         tools:context=".activitties.MainActivity">
 
     <android.support.v7.widget.RecyclerView
