Adjusted the coordinates when moving the cards on screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/mainActivityView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -24,6 +25,7 @@
             android:layout_height="0dp"/>
 
     <LinearLayout
+            android:id="@+id/playBarView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
