--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,38 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="190dp"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        card_view:cardCornerRadius="5dp">
-    <LinearLayout
+        android:background="@android:color/white"
+        android:baselineAligned="false"
+        android:orientation="vertical"
+        android:padding="5dp"
+        android:weightSum="4">
+    <ImageView
+            android:id="@+id/imgShare"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:baselineAligned="false"
-            android:orientation="vertical"
-            android:padding="5dp"
-            android:weightSum="4">
-        <ImageView
-                android:id="@+id/imgShare"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:layout_gravity="center"
-                android:src="@drawable/ball"/>
-        <TextView
-                android:id="@+id/txvTitle"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:text=""
-                android:textColor="#616161"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:layout_gravity="center"
+            android:src="@drawable/ball"/>
+    <TextView
+            android:id="@+id/txvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:text=""
+            android:textColor="#616161"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+</LinearLayout>
