Add the play all button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
             android:layout_rowWeight="1"
             android:layout_gravity="fill"
             android:orientation="horizontal"
-            android:weightSum="8"
+            android:weightSum="16"
             android:baselineAligned="false">
         <Button
                 android:id="@+id/clearOneButton"
@@ -50,11 +50,16 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"/>
+        <Button android:id="@+id/playAllButton"
+                android:text="PA"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/selectedCardsView"
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
-                android:layout_weight="6"/>
+                android:layout_weight="13"/>
 
 
     </LinearLayout>
