--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,81 +8,103 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:rowCount="4"
+        android:columnCount="16"
         android:clipChildren="false"
         android:clipToPadding="false"
         tools:context=".activitties.MainActivity">
 
+    <!-- User Configuration options grid -->
+    <GridLayout
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_rowWeight="3"
+            android:layout_columnWeight="3"
+            android:layout_rowSpan="3"
+            android:layout_columnSpan="3"
+            android:layout_gravity="fill">
+
+    </GridLayout>
+
+    <!-- Static cards recycler view -->
     <android.support.v7.widget.RecyclerView
             android:id="@+id/staticCardsView"
-            android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_width="0dp"
             android:layout_row="0"
+            android:layout_column="3"
             android:layout_rowWeight="1"
+            android:layout_columnWeight="13"
+            android:layout_columnSpan="13"
             android:layout_gravity="fill"/>
 
+    <!-- Main cards recycler view -->
     <android.support.v7.widget.RecyclerView
             android:id="@+id/mainCardsView"
-            android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_width="0dp"
             android:layout_row="1"
+            android:layout_column="3"
             android:layout_rowWeight="2"
+            android:layout_columnWeight="13"
+            android:layout_rowSpan="2"
+            android:layout_columnSpan="13"
             android:layout_gravity="fill"/>
 
-    <LinearLayout
-            android:id="@+id/playBarView"
-            android:layout_width="match_parent"
+    <!-- Selected cards recycler view -->
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/selectedCardsView"
             android:layout_height="0dp"
+            android:layout_width="0dp"
             android:layout_row="3"
+            android:layout_column="3"
             android:layout_rowWeight="1"
-            android:layout_gravity="fill"
-            android:orientation="horizontal"
-            android:weightSum="16"
-            android:baselineAligned="false">
-        <GridLayout
-                android:layout_weight="3"
+            android:layout_columnWeight="13"
+            android:layout_columnSpan="13"
+            android:layout_gravity="fill"/>
+
+    <!-- Play/Clear buttons grid-->
+    <GridLayout
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="3"
+            android:layout_columnSpan="3"
+            android:layout_gravity="fill">
+        <Button
+                android:id="@+id/clearOneButton"
+                android:layout_height="0dp"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:rowCount="2"
-                android:columnCount="2">
-            <Button
-                    android:id="@+id/clearOneButton"
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:text="C"
-                    android:layout_row="0"
-                    android:layout_column="0"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"/>
-            <Button
-                    android:id="@+id/clearAllButton"
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:text="CA"
-                    android:layout_column="1"
-                    android:layout_row="0"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"/>
-            <Button
-                    android:id="@+id/playAllButton"
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:text="PA"
-                    android:layout_row="1"
-                    android:layout_column="0"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="2"
-                    android:layout_columnSpan="2"
-                    android:layout_gravity="fill"/>
-        </GridLayout>
-
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/selectedCardsView"
-                android:layout_height="match_parent"
+                android:text="C"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"/>
+        <Button
+                android:id="@+id/clearAllButton"
+                android:layout_height="0dp"
                 android:layout_width="0dp"
-                android:layout_weight="13"/>
+                android:text="CA"
+                android:layout_column="1"
+                android:layout_row="0"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"/>
+        <Button
+                android:id="@+id/playAllButton"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:text="PA"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="2"
+                android:layout_columnSpan="2"
+                android:layout_gravity="fill"/>
+    </GridLayout>
 
-
-    </LinearLayout>
 </GridLayout>
