[Add a Parent Screen] Rename main activity to child screen activity

--- a/app/src/main/res/layout/activity_child_screen.xml
+++ b/app/src/main/res/layout/activity_child_screen.xml
@@ -11,7 +11,7 @@
         android:columnCount="16"
         android:clipChildren="false"
         android:clipToPadding="false"
-        tools:context=".activitties.MainActivity">
+        tools:context=".activitties.ChildScreenActivity">
 
     <!-- User Configuration options grid -->
     <GridLayout
