--- a/app/src/main/res/layout/activity_parent_screen.xml
+++ b/app/src/main/res/layout/activity_parent_screen.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:orientation="vertical"
+                xmlns:tools="http://schemas.android.com/tools"
+                tools:context=".activitties.ParentScreenActivity">
+    <android.support.design.widget.BottomNavigationView android:id="@+id/parent_screen_navigation"
+                                                        android:layout_width="match_parent"
+                                                        android:layout_height="wrap_content"
+                                                        app:menu="@menu/parent_screen_navigation"/>
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout android:id="@+id/parent_screen_fragment_container"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_below="@id/parent_screen_navigation"/>
+</RelativeLayout>
