--- a/app/src/main/res/layout/activity_parent_screen.xml
+++ b/app/src/main/res/layout/activity_parent_screen.xml
@@ -5,10 +5,10 @@
                 android:orientation="vertical"
                 xmlns:tools="http://schemas.android.com/tools"
                 tools:context=".activities.ParentScreenActivity">
-    <android.support.design.widget.BottomNavigationView android:id="@+id/parent_screen_navigation"
-                                                        android:layout_width="match_parent"
-                                                        android:layout_height="wrap_content"
-                                                        app:menu="@menu/parent_screen_navigation"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView android:id="@+id/parent_screen_navigation"
+                                                                       android:layout_width="match_parent"
+                                                                       android:layout_height="wrap_content"
+                                                                       app:menu="@menu/parent_screen_navigation"/>
 
     <FrameLayout android:id="@+id/parent_screen_fragment_container"
                  android:layout_width="match_parent"
