--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -1,5 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:rowCount="1"
+    android:columnCount="2"
+    android:clipChildren="false"
+    android:clipToPadding="false">
+
+    <!-- Right Column -->
+    <GridLayout
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_row="0"
+        android:layout_rowWeight="1"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_gravity="fill"
+
+        android:rowCount="5"
+        android:columnCount="2">
+
+        <ImageView
+            android:id="@+id/currentCardImage"
+            android:src="@drawable/home_image"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="0"
+            android:layout_rowWeight="3"
+            android:layout_rowSpan="3"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:scaleType="fitXY"/>
+        <TextView
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="0"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"/>
+        <Button
+            android:id="@+id/editCurrentCardBtn"
+            android:text="@string/change_the_image_btn_title"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"/>
+        <TextView
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"/>
+        <TextView
+            android:text="@string/card_title"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="3"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill"/>
+        <EditText
+            android:id="@+id/currentCardTitle"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="4"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="2"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill"/>
+
+
+    </GridLayout>
+
+    <!-- Left Column -->
+    <GridLayout
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_row="0"
+        android:layout_rowWeight="1"
+        android:layout_column="0"
+        android:layout_columnWeight="1"
+        android:layout_gravity="fill"
+
+        android:rowCount="4"
+        android:columnCount="4">
+        <ImageButton
+            android:id="@+id/okBtn"
+            android:src="@drawable/ok_btn"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="0"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:scaleType="fitXY"/>
+        <TextView
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="0"
+            android:layout_rowWeight="1"
+            android:layout_column="1"
+            android:layout_columnWeight="3"
+            android:layout_columnSpan="3"
+            android:layout_gravity="fill"/>
+        <TextView
+            android:text="@string/play"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="3"
+            android:layout_columnSpan="3"
+            android:layout_gravity="fill"/>
+        <ImageButton
+            android:id="@+id/playBtn"
+            android:src="@drawable/play_btn"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_column="3"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:scaleType="fitXY"/>
+        <TextView
+            android:text="@string/add_sound"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="3"
+            android:layout_columnSpan="3"
+            android:layout_gravity="fill"/>
+        <ImageButton
+            android:id="@+id/addSoundBtn"
+            android:src="@drawable/record_btn"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_column="3"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:scaleType="fitXY"/>
+        <TextView
+            android:text="@string/delete_card"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="3"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="3"
+            android:layout_columnSpan="3"
+            android:layout_gravity="fill"/>
+        <ImageButton
+            android:id="@+id/deleteCardBtn"
+            android:src="@drawable/delete_btn"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_row="3"
+            android:layout_rowWeight="1"
+            android:layout_column="3"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:scaleType="fitXY"/>
+
+    </GridLayout>
 
 </GridLayout>
